2006-08-23  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-follow-gnus-link): Make sure the dedicated
	gnus frame is selected.

2006-08-23  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-starting): Reset gdb-signalled to nil.

2006-08-22  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-set-matches-1): Fix full matching for subdirs.
	Add suffix matching for subdirs.

2006-08-22  Jorgen Schaefer  <forcer@forcix.cx>  (tiny change)

	* x-dnd.el (x-dnd-drop-data): Don't call goto-char if
	mouse-yank-at-point is non-nil.

2006-08-22  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-frame-memory-buffer): Make frame
	a bit wider and remove fringes to fit initial output on line.

2006-08-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* frame.el (blink-cursor-end): Only ignore the error we care about.
	(blink-cursor-mode): Use blink-cursor-end to simplify the code.

2006-08-21  Richard Stallman  <rms@gnu.org>

	* whitespace.el (whitespace-cleanup): Doc fix.

2006-08-20  Ryan Yeske  <rcyeske@gmail.com>

	* net/rcirc.el (rcirc-show-maximum-output): New var.
	(rcirc-buffer-process): If no buffer argument is supplied, use
	current-buffer.
	(rcirc-complete-nick): Complete to the last completed nick first.
	(rcirc-mode): Preserve the value of `rcirc-urls' across
	connections.  Setup scroll function.
	(rcirc-scroll-to-bottom): New function.
	(rcirc-print): Use nick syntax around regexp work.
	Notice dim-nicks speaking only if they say our nick.
	(rcirc-update-activity-string): Do not show the modeline indicator
	if there are no live rcirc processes.
	(rcirc-cmd-ignore): Ignore case.
	(rcirc-browse-url-at-point): Fix off-by-one error.

2006-08-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el: Remove * in defcustom docstrings.
	(run-python, python-proc, python-try-complete): Use derived-mode-p.
	(python-mode): Set tab-width and indent-tabs-mode.

2006-08-20  Dave Love  <fx@gnu.org>
